fix size of contact us page - it was too small

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -384,7 +384,7 @@ li a {
 .pages_about {
 	main {
 		background-color: $background-color2;
-		height: 60vh;
+		/*height: 60vh;*/
 		text-align: center;
 	}
 	p {
